--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.5",
+    "next": "latest",
     "react": "^18",
     "react-dom": "^18",
     "@supabase/supabase-js": "^2.39.0"
